# inshack-2019

./: .mkctf.repo.yml  CONTRIBUTORS.md  README.md
atchap/: .mkctf.yml  Dockerfile  build  deploy  writeup.md
bypasses-everywhere/: .mkctf.yml  build  deploy  writeup.md
bypasses-everywhere-v2/: .mkctf.yml  build  deploy  writeup.md
challs-dont-matter-anymore/: .mkctf.yml  writeup.md
crunchy/: .mkctf.yml  writeup.md
dashlame-part1/: .mkctf.yml  writeup.md
dashlame-part2/: .mkctf.yml  Dockerfile  writeup.md
deaddrop-filesystem/: .gitignore  .mkctf.yml  build  deploy  writeup.md
deaddrop-filesystem/src/: CMakeLists.txt  README.md
deaddrop-filesystem/src/ddfs/: config.h  ddfs.h  macro.h  main.c  types.h
deaddrop-filesystem/src/ddfs/crypto/: crypto.c  crypto.h  index.c  index.h  record.c  record.h
deaddrop-filesystem/src/ddfs/ops/: access.c  chmod.c  chown.c  create.c  fgetattr.c  fsync.c  fsyncdir.c  ftruncate.c  getattr.c  mkdir.c  mknod.c  op.c.tpl  open.c  opendir.c  read.c  readdir.c  release.c  releasedir.c  rename.c  rmdir.c  statfs.c  unlink.c  utime.c  utimens.c  write.c  xattr.c
deaddrop-filesystem/src/ddfs/util/: convert.c  convert.h  log.c  log.h  path.c  path.h
drone-motion/: .gitignore  .mkctf.yml  build  writeup.md
exploring-the-universe/: .gitignore  .mkctf.yml  Dockerfile  build  deploy  writeup.md
gflag/: .mkctf.yml  writeup.md
gimme-your-shell/: .mkctf.yml  Dockerfile  Dockerfile_sandbox  build  deploy
hack-code-part1/: .mkctf.yml  Dockerfile  build  deploy  writeup.md
hack-code-part2/: .mkctf.yml  build  writeup.md
hack-code-part3/: .mkctf.yml  deploy
hack-code-part4/: .mkctf.yml  writeup.md
hell-of-a-jail/: .mkctf.yml  Dockerfile  Dockerfile_sandbox  build  deploy  sshd_config  writeup.md
industrial-process/: .mkctf.yml  writeup.md
insanity/: .mkctf.yml  writeup.md
(+367 files in other folders)
